[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/DefaultUITheme.tres" type="Theme" id=1]
[ext_resource path="res://GaryScenes/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/BIGFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://GaryScenes/PlayerHUD/TextDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://GaryScenes/PlayerHUD/FancyDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://GaryScenes/MainMenu/Options.gd" type="Script" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
OpeningStory = "You are the space captain of a vessel of space thieves that recently stole a prized artifact from the space king. However, now he's coming after you and he's got the space police in tow.
You have to give them the slip - using SLIPSPACE!"

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -209.0
margin_top = -18.5
margin_right = 209.0
margin_bottom = 18.5
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
text = "Slipspace Escapades"
scroll_active = false

[node name="MenuOptions" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -60.0
margin_top = -20.0
margin_right = 60.0
margin_bottom = 20.0
grow_horizontal = 2
rect_min_size = Vector2( 120, 0 )
custom_constants/separation = 16

[node name="NewGamePlus" type="Label" parent="MenuOptions"]
margin_right = 120.0
margin_bottom = 20.0
align = 1

[node name="Begin" type="Button" parent="MenuOptions"]
margin_top = 36.0
margin_right = 120.0
margin_bottom = 64.0
text = "Begin"

[node name="Story" type="Button" parent="MenuOptions"]
margin_top = 80.0
margin_right = 120.0
margin_bottom = 108.0
text = "Story"

[node name="Options" type="Button" parent="MenuOptions"]
margin_top = 124.0
margin_right = 120.0
margin_bottom = 152.0
text = "Options"

[node name="Quit" type="Button" parent="MenuOptions"]
margin_top = 168.0
margin_right = 120.0
margin_bottom = 196.0
text = "Quit"

[node name="HighScoreDisplay" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -37.0
margin_right = 352.0
custom_fonts/font = ExtResource( 3 )
text = "Highscore: smth"

[node name="VersionNumberDisplay" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -20.0
grow_horizontal = 0
text = "Version: 1.0.1"

[node name="TextDisplay" parent="." instance=ExtResource( 4 )]
anchor_top = 0.1
anchor_right = 0.28
anchor_bottom = 0.9
rect_scale = Vector2( -1, 1 )

[node name="FancyDisplay" parent="." instance=ExtResource( 5 )]
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_top = -240.0
margin_right = 409.6
margin_bottom = 240.0

[node name="Options" type="VBoxContainer" parent="FancyDisplay/Panel/Content/ScrollContainer" index="0"]
margin_right = 295.68
margin_bottom = 337.6
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
script = ExtResource( 6 )

[node name="Audio" type="VBoxContainer" parent="FancyDisplay/Panel/Content/ScrollContainer/Options"]
margin_right = 295.0
margin_bottom = 110.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio"]
margin_right = 295.0
margin_bottom = 20.0
text = "Audio settings:"

[node name="Master" type="HBoxContainer" parent="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio"]
margin_top = 30.0
margin_right = 295.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio/Master"]
margin_right = 103.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Master -"

[node name="HSlider" type="HSlider" parent="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio/Master"]
margin_left = 107.0
margin_right = 295.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.8
max_value = 1.0
step = 0.01
scrollable = false

[node name="Music" type="HBoxContainer" parent="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio"]
margin_top = 60.0
margin_right = 295.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio/Music"]
margin_right = 103.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Music  -"

[node name="HSlider" type="HSlider" parent="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio/Music"]
margin_left = 107.0
margin_right = 295.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.8
max_value = 1.0
step = 0.01
scrollable = false

[node name="SFX" type="HBoxContainer" parent="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio"]
margin_top = 90.0
margin_right = 295.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio/SFX"]
margin_right = 103.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Sfx    -"

[node name="HSlider" type="HSlider" parent="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio/SFX"]
margin_left = 107.0
margin_right = 295.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.8
max_value = 1.0
step = 0.01
scrollable = false

[connection signal="pressed" from="MenuOptions/Begin" to="." method="_on_Begin_pressed"]
[connection signal="pressed" from="MenuOptions/Story" to="." method="_on_Story_pressed"]
[connection signal="pressed" from="MenuOptions/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MenuOptions/Quit" to="." method="_on_Quit_pressed"]
[connection signal="OnOpening" from="TextDisplay" to="FancyDisplay" method="Close"]
[connection signal="OnOpening" from="FancyDisplay" to="TextDisplay" method="Close"]
[connection signal="OnOpening" from="FancyDisplay" to="FancyDisplay/Panel/Content/ScrollContainer/Options" method="_on_FancyDisplay_OnOpening"]
[connection signal="value_changed" from="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio/Master/HSlider" to="FancyDisplay/Panel/Content/ScrollContainer/Options" method="_on_Master_volume_changed"]
[connection signal="value_changed" from="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio/Music/HSlider" to="FancyDisplay/Panel/Content/ScrollContainer/Options" method="_on_Music_volume_changed"]
[connection signal="value_changed" from="FancyDisplay/Panel/Content/ScrollContainer/Options/Audio/SFX/HSlider" to="FancyDisplay/Panel/Content/ScrollContainer/Options" method="_on_SFX_volume_changed"]
[connection signal="pressed" from="FancyDisplay/Panel/Confirm" to="FancyDisplay/Panel/Content/ScrollContainer/Options" method="_on_Confirm_pressed"]

[editable path="FancyDisplay"]
